Bug 1588025 - Change an argument to nsContainerFrame* for ConstructAnonymousContentForCanvas. r=jfkthame

The only caller SetRootElementFrameAndConstructCanvasAnonContent()
already passes nsContainerFrame* to aFrame.

A minor cleanup discovered while working on this bug.

Differential Revision: https://phabricator.services.mozilla.com/D48943